Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Apr-2011 Mark Dexter
 # [#25661] *Redirect not now fully editable
 # [#25657] Mootools no longer loaded in backend

16-Apr-2011 Jean-Marie Simonet
 $ Updating es-ES installation file
 # [#25650] Can't insert image for menu item. Thanks Dennis and Rouven
 
15-Apr-2011 Jean-Marie Simonet
 # Removing install check

-------------------- 1.6.2 Stable Release [14-Apr-2011] ------------------

14-Apr-2011
 # [#25617] performance of assets table query with > 40 articles on website in registered mode

13-Apr-2011 Jean-Marie Simonet
 # Correcting error in the plugin language filter xml
 
12-Apr-2011 Mark Dexter
 # [#25593] Module Articles Category takes server timezone instead of Joomla one
 # [#25370] new layouts - No pagination on articles category page if first visit

11-Apr-2011 Mark Dexter
 # [#25602] Sort in Article Category List broken
 # [#23364] Installation of tar.gz packages fails in xampp under Windows
 # [#25614] *en-GB.files_joomla.sys.ini not loading
 # [#25541] Apply (Save and present in Editor again) does not checkout row
 # [#23878] Remove remaining ereg* functions - Obscolete in PHP 5.3
 # [#25581] RTL in Atomic
 # [#25603] *Email Cloak Plugin outputs preformatted code in email "to" field
 # [#21809] access levels - pagination::orderDownIcon appearing before last item
 # [#24835] Administrator (with a capital A) does weird stuff

10-Apr-2011 Jean-Marie Simonet
 $ Adding lib_joomla.ini into site language folder and localise.php in admin language folder to prevent confusion for TTs.
 $ Changing en-GB.xmls version for 1.6.2
 
09-Apr-2011 Jean-Marie Simonet
 #$ Updating pl-PL installation language

08-Apr-2011 Jean-Marie Simonet
 # [#25585] *Unused Jtoolbarhelper title in Language Manager Content Languages