@@ -66,6 +66,7 @@ class InstallerControllerUpdate extends JController {
 		JRequest::checkToken() or jexit(JText::_('JINVALID_TOKEN'));
 		$model = $this->getModel('update');
 		$model->purge();
+		$model->enableSites();
 		$this->setRedirect(JRoute::_('index.php?option=com_installer&view=update',false), $model->_message);
 	}
 }
