@@ -7,10 +7,13 @@
 COM_INSTALLER="Installation Manager"
 COM_INSTALLER_AUTHOR_INFORMATION="Author Information"
 COM_INSTALLER_CONFIGURATION="Installer configuration"
+COM_INSTALLER_ENABLED_UPDATES_1=", 1 disabled site was enabled"
+COM_INSTALLER_ENABLED_UPDATES_MORE=", %s disabled sites were enabled"
 COM_INSTALLER_ERROR_METHOD="Method Not Implemented"
 COM_INSTALLER_ERROR_NO_EXTENSIONS_SELECTED="No extensions selected"
 COM_INSTALLER_EXTENSION_PUBLISHED="Extension successfully enabled."
 COM_INSTALLER_EXTENSION_UNPUBLISHED="Extension successfully disabled."
+COM_INSTALLER_FAILED_TO_ENABLE_UPDATES=", failed to enable updates"
 COM_INSTALLER_FAILED_TO_PURGE_UPDATES="Failed to purge updates"
 COM_INSTALLER_HEADER_DISCOVER="Extension Manager: Discover"
 COM_INSTALLER_HEADER_INSTALL="Extension Manager: Install"
