@@ -30,6 +30,7 @@ $ -> Language fix or change
 18-Apr-2011 Mark Dexter
  # [#25661] *Redirect not now fully editable
  # [#25657] Mootools no longer loaded in backend
+ # [#25688] Updates sites never re-enabled after being disabled
 
 16-Apr-2011 Jean-Marie Simonet
  $ Updating es-ES installation file
